--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ compiler:
  - gcc
  - clang
 # Change this to your needs
-script:  make dep && make test
+script:  make dep && make test && ./geometry_test
